# ActCLI

./: .gitignore  AGENTS.md  ActCLI_Brainstorming_2025-09-18.md  ActCLI_Review.md  ActCLI_Tier0_Tier1_Spec.md  ActCLI_VC_Accelerator_Fit.md  CLAUDE.md  GPT-Thinking-Discussion.md  Git-MCP.md  README.md  actcli.toml  pyproject.toml
docs/: LAYOUTS.md  MCP_SETUP.md  README.md  STATUS.md  TASKS.md  UI_IMPROVEMENTS.md
docs/analysis/: deepseek_markdown_20250918_425641.md
docs/strategy/: actcli_additional_considerations.md
scripts/: fresh.sh  ollama-local.sh
src/actcli/: cli.py  config.py  policy.py  repl_tui.py  transcript.py  trust.py
src/actcli/auth/: providers.py  store.py
src/actcli/commands/: auth.py  chat.py  doctor.py  init.py  mcp.py  models.py  pr.py  presenter.py  trust.py  wizard.py
src/actcli/git/: local.py
src/actcli/mcp/: config.py  git_client.py
src/actcli/seminar/: coordinator.py  synthesizer.py
src/actcli/seminar/adapters/: anthropic.py  base.py  echo.py  gemini.py  ollama.py  openai.py
src/actcli/ui/: claude_layout.py  enhanced_layout.py  layout.py  select.py  vscode_layout.py
tests/: conftest.py
tests/integration/: test_chat_roundtable.py  test_mcp_commands.py
tests/unit/: test_anthropic_adapter.py  test_config.py  test_coordinator.py  test_gemini_adapter.py  test_mcp_config.py  test_models_cmd.py  test_ollama_adapter.py  test_openai_adapter.py  test_policy.py  test_transcript.py  test_trust.py
