[project]
name = "actcli"
version = "0.0.1"
description = "ActCLI — terminal-native actuarial workflows with multi-model roundtable chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "httpx>=0.27.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
auth = ["keyring>=25.0.0"]

[project.scripts]
actcli = "actcli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actcli"]

